try fix gapi

--- a/src/less/draw.less
+++ b/src/less/draw.less
@@ -55,7 +55,6 @@ html,body{
 	.overlay, [class^="toolbar-"], [class*=" toolbar-"]{ display:none; }
 } 
 .modal{ box-shadow:none; }
-.modal-scrollable{ position:absolute; }
 .modal-backdrop{ display:none; }
 
 .draw{
